--- a/variables/Medical History/anxietymedhxhp.json
+++ b/variables/Medical History/anxietymedhxhp.json
@@ -1,6 +1,6 @@
 {
   "id": "anxietymedhxhp",
-  "display_name": "Anxiety from HP Medical History:  (0=None, 1=Resolved, 2=Ongoing)",
+  "display_name": "Anxiety from Medical history from Physician's History and Physical Form:  (0=None, 1=Resolved, 2=Ongoing)",
   "description": "",
   "type": "choices",
   "domain": "medhistory",
