Add fileid columns, fix links in harmonized variable desc

--- a/.spout.yml
+++ b/.spout.yml
@@ -4,7 +4,7 @@ charts:
 - chart: gender
   title: Sex
 - chart: ethnicity
-  title: Ethnicity
+  title: Race/Ethnicity
 webservers:
   - name: production
     url: https://sleepdata.org
